[field] fix fields in fieldsets overflowing container width

--- a/packages/@sanity/form-builder/src/inputs/ObjectInput/styles/Field.css
+++ b/packages/@sanity/form-builder/src/inputs/ObjectInput/styles/Field.css
@@ -4,4 +4,5 @@
   display: block;
   width: 100%;
   box-sizing: border-box;
+  min-width: 0;
 }
